# C-Primer

./: CMakeLists.txt  ReadMe.md  function 2.cpp  main.cpp
C++Primer-2-practice/: 3rd.cpp  3rd.h  Cprimer2_1.cpp  Cprimer2_1.h  Second.cpp  Second.h  prac1.cpp
Prac3/: One.cpp  One.h  T_2.cpp  T_2.h  T_3.cpp  T_3.h
